0004585: 上传临时作业，当学生昵称+群昵称设置过长时，显示不全

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1703,7 +1703,9 @@
 					"js/libs/crypto-js/crypto-js.js",
 					"js/utils/events.js"
 				],
-				"refer": [],
+				"refer": [
+					"html/mine/qun_manage_invite_info.html"
+				],
 				"priority": 0
 			},
 			"html/mine/approval-apply.html": {
@@ -2148,7 +2150,9 @@
 					"html/homework/workdetail-tea-sub.html",
 					"fonts/mui.ttf",
 					"css/mui.min.css",
-					"css/utils/common.css"
+					"css/utils/common.css",
+					"js/mui.min.js",
+					"js/utils/events.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -2821,7 +2825,17 @@
 					"js/libs/crypto-js/crypto-js.js",
 					"js/utils/grideControl.js",
 					"css/mui.min.css",
-					"css/utils/common.css"
+					"css/utils/common.css",
+					"js/libs/jquery.js",
+					"js/storageKeyName.js",
+					"js/libs/RSA/BigInt.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js",
+					"js/libs/myStorage/myStorage.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -2923,6 +2937,28 @@
 					"css/mui.min.css",
 					"html/mine/qun_manage_data_sub.html",
 					"css/utils/common.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/mine/qun_manage_invite_info.html": {
+				"resources": [
+					"image/utils/default_personalimage.png",
+					"js/storageKeyName.js",
+					"fonts/mui.ttf",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"css/utils/common.css",
+					"js/libs/myStorage/myStorage.js",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/mui.min.js",
+					"js/libs/RSA/BigInt.js",
+					"css/mui.min.css",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js"
 				],
 				"refer": [],
 				"priority": 0
