与我相关 关闭赞功能

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2383,7 +2383,8 @@
 					"js/utils/RSAEncrypt.js",
 					"image/homework/math.png",
 					"js/libs/crypto-js/crypto-js.js",
-					"image/utils/default_personalimage.png"
+					"image/utils/default_personalimage.png",
+					"fonts/iconfont.ttf"
 				],
 				"refer": [],
 				"priority": 0
