--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -786,7 +786,8 @@
 					"image/cloud/cloud_0_excel_0.png",
 					"image/cloud/cloud_0_word_0.png",
 					"image/cloud/cloud_0_txt_0.png",
-					"image/cloud/cloud_0_yasuobao_0.png"
+					"image/cloud/cloud_0_yasuobao_0.png",
+					"fonts/iconfont.ttf"
 				],
 				"refer": [
 					"html/homework/homework-tea.html",
@@ -2207,7 +2208,8 @@
 					"fonts/mui.ttf",
 					"css/mui.min.css",
 					"css/utils/common.css",
-					"js/mui.min.js"
+					"js/mui.min.js",
+					"js/utils/events.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -2294,7 +2296,8 @@
 					"js/utils/signHmacSHA1.js",
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
-					"js/utils/RSAEncrypt.js"
+					"js/utils/RSAEncrypt.js",
+					"fonts/iconfont.ttf"
 				],
 				"refer": [],
 				"priority": 0
@@ -2761,7 +2764,8 @@
 					"js/utils/events.js",
 					"css/mui.min.css",
 					"css/utils/common.css",
-					"css/iconfont/iconfont.css"
+					"css/iconfont/iconfont.css",
+					"fonts/iconfont.ttf"
 				],
 				"refer": [],
 				"priority": 0
@@ -3046,7 +3050,21 @@
 				"resources": [
 					"js/publicQiuzhiProtocol.js",
 					"css/iconfont/iconfont.css",
-					"js/libs/myStorage/myStorage.js"
+					"js/libs/myStorage/myStorage.js",
+					"js/mui.min.js",
+					"js/libs/RSA/BigInt.js",
+					"fonts/mui.ttf",
+					"js/utils/events.js",
+					"js/libs/RSA/Barrett.js",
+					"css/mui.min.css",
+					"js/libs/RSA/RSA.js",
+					"css/utils/common.css",
+					"js/storageKeyName.js",
+					"js/libs/crypto-js/require.js",
+					"js/libs/jquery.js",
+					"js/utils/signHmacSHA1.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js"
 				],
 				"refer": [],
 				"priority": 0
