修改更新逻辑

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2300,7 +2300,8 @@
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
-					"fonts/iconfont.ttf"
+					"fonts/iconfont.ttf",
+					"css/quan/custom-textarea.css"
 				],
 				"refer": [],
 				"priority": 0
