--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2365,7 +2365,8 @@
 					"js/libs/crypto-js/crypto-js.js",
 					"js/publicHomeworkProtocol.js",
 					"css/homework/subjects-icon.css",
-					"css/iconfont/iconfont.css"
+					"css/iconfont/iconfont.css",
+					"image/utils/default_personalimage.png"
 				],
 				"refer": [
 					"html/homework/pic-detail.html"
@@ -3076,7 +3077,8 @@
 					"js/libs/jquery.js",
 					"js/utils/signHmacSHA1.js",
 					"js/utils/postData.js",
-					"js/utils/RSAEncrypt.js"
+					"js/utils/RSAEncrypt.js",
+					"fonts/iconfont.ttf"
 				],
 				"refer": [],
 				"priority": 0
