--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -885,7 +885,8 @@
 					"js/publicProtocol.js",
 					"css/utils/common.css",
 					"js/utils/Statusbar.js",
-					"js/utils/app-update.js"
+					"js/utils/app-update.js",
+					"image/dynamic/u101.png"
 				],
 				"refer": [
 					"html/register/register_phoneNumber.html",
@@ -1253,7 +1254,8 @@
 				],
 				"refer": [
 					"html/index.html",
-					"html/index/index.html"
+					"html/index/index.html",
+					"html/register/login.html"
 				],
 				"priority": 0
 			},
