--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2988,7 +2988,9 @@
 					"image/mine/jiaobaoyun.png",
 					"js/utils/events.js"
 				],
-				"refer": [],
+				"refer": [
+					"html/mine/function.html"
+				],
 				"priority": 0
 			},
 			"html/mine/qun_manage_member_main.html": {
