--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2807,9 +2807,7 @@
 					"js/libs/crypto-js/crypto-js.js",
 					"image/utils/default_personalimage.png"
 				],
-				"refer": [
-					"html/qiuzhi/expert-detail.html"
-				],
+				"refer": [],
 				"priority": 0
 			},
 			"html/scienceeducation/senedu_show_main.html": {
@@ -3108,8 +3106,7 @@
 					"js/utils/RSAEncrypt.js",
 					"css/mine/manager_member.css",
 					"css/iconfont/iconfont.css",
-					"css/mine/manager_data.css",
-					"fonts/iconfont.ttf"
+					"css/mine/manager_data.css"
 				],
 				"refer": [
 					"html/quan/group-pInfo.html",
@@ -3119,33 +3116,6 @@
 			},
 			"html/qiuzhi/expert-detail.html": {
 				"resources": [
-<<<<<<< .merge_file_a04424
-					"js/publicQiuzhiProtocol.js",
-					"js/storageKeyName.js",
-					"js/utils/events.js",
-					"js/libs/RSA/Barrett.js",
-					"js/libs/crypto-js/require.js",
-					"image/qiuzhi/comment.png",
-					"css/utils/common.css",
-					"js/libs/myStorage/myStorage.js",
-					"image/qiuzhi/yaoqing.png",
-					"css/iconfont/iconfont.css",
-					"image/qiuzhi/answer.png",
-					"js/publicProtocol.js",
-					"js/libs/jquery.js",
-					"image/qiuzhi/question.png",
-					"js/mui.min.js",
-					"js/libs/RSA/BigInt.js",
-					"css/mui.min.css",
-					"js/utils/signHmacSHA1.js",
-					"js/libs/RSA/RSA.js",
-					"js/utils/postData.js",
-					"js/utils/RSAEncrypt.js",
-					"fonts/mui.ttf",
-					"fonts/iconfont.ttf",
-					"image/utils/default_personalimage.png",
-					"js/libs/crypto-js/crypto-js.js"
-=======
 					"image/qiuzhi/yaoqing.png",
 					"image/qiuzhi/answer.png",
 					"image/qiuzhi/question.png",
@@ -3190,7 +3160,6 @@
 				"resources": [
 					"css/mui.min.css",
 					"css/utils/common.css"
->>>>>>> .merge_file_a04848
 				],
 				"refer": [],
 				"priority": 0
