--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -512,7 +512,8 @@
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
-					"js/libs/crypto-js/crypto-js.js"
+					"js/libs/crypto-js/crypto-js.js",
+					"fonts/fangzheng.ttf"
 				],
 				"refer": [
 					"html/quan/class-group.html"
@@ -652,7 +653,8 @@
 					"js/utils/cryption.js",
 					"js/utils/CloudFileUtil.js",
 					"js/qiniu/qiniu.js",
-					"js/utils/compress.js"
+					"js/utils/compress.js",
+					"fonts/fangzheng.ttf"
 				],
 				"refer": [],
 				"priority": 0
@@ -1368,7 +1370,8 @@
 					null,
 					"js/cloud/AndroidFileSystem.js",
 					"js/utils/UploadHeadImage.js",
-					"js/utils/CloudFileUtil.js"
+					"js/utils/CloudFileUtil.js",
+					"fonts/fangzheng.ttf"
 				],
 				"refer": [
 					"html/utils/customizeCity.html"
@@ -1402,7 +1405,8 @@
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
 					"image/cloud/record_link.gif",
-					"fonts/iconfont.ttf"
+					"fonts/iconfont.ttf",
+					"fonts/fangzheng.ttf"
 				],
 				"refer": [
 					"html/cloud/keeprecord_callorrecord_main.html"
@@ -1588,7 +1592,8 @@
 					"js/utils/signHmacSHA1.js",
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
-					"js/utils/RSAEncrypt.js"
+					"js/utils/RSAEncrypt.js",
+					"fonts/fangzheng.ttf"
 				],
 				"refer": [],
 				"priority": 0
@@ -1892,7 +1897,8 @@
 					"image/utils/default_personalimage.png",
 					"css/mine/apply.css",
 					"js/utils/events.js",
-					"html/mine/apply-group.html"
+					"html/mine/apply-group.html",
+					"fonts/fangzheng.ttf"
 				],
 				"refer": [],
 				"priority": 0
@@ -2909,7 +2915,8 @@
 			"html/cloud/keeprecord_callorrecord_sub.html": {
 				"resources": [
 					"js/utils/MultiMedia.js",
-					"css/utils/MultiMedia.css"
+					"css/utils/MultiMedia.css",
+					"js/libs/crypto-js/crypto-js.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -3151,7 +3158,8 @@
 					"js/utils/signHmacSHA1.js",
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
-					"js/utils/RSAEncrypt.js"
+					"js/utils/RSAEncrypt.js",
+					"fonts/fangzheng.ttf"
 				],
 				"refer": [
 					"html/qiuzhi/qiuzhi-expertAllAnswer.html",
@@ -3193,7 +3201,9 @@
 					"js/mui.lazyload.img.js",
 					"css/sciedu/sciedu.css",
 					"css/mui.min.css",
-					"css/utils/common.css"
+					"css/utils/common.css",
+					"js/libs/crypto-js/crypto-js.js",
+					"/image/utils/default_load_2.gif"
 				],
 				"refer": [],
 				"priority": 0
@@ -3207,14 +3217,22 @@
 					"css/utils/pullToRefresh.css",
 					"js/mui.pullToRefresh.material.js",
 					"js/mui.lazyload.js",
-					"js/mui.lazyload.img.js"
+					"js/mui.lazyload.img.js",
+					"js/libs/crypto-js/crypto-js.js",
+					"image/dynamic/icon_praise_small.png",
+					"css/iconfont/iconfont.css",
+					"css/mui.min.css",
+					"css/utils/common.css"
 				],
 				"refer": [],
 				"priority": 0
 			},
 			"html/qiuzhi/qiuzhi-expertAllAnswer.html": {
 				"resources": [
-					"css/qiuzhi/qiuzhi-inviteAnswer.css"
+					"css/qiuzhi/qiuzhi-inviteAnswer.css",
+					"js/mui.pullToRefresh.js",
+					"css/iconfont/iconfont.css",
+					"js/mui.pullToRefresh.material.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -3230,14 +3248,34 @@
 			"html/qiuzhi/AttentionPersons.html": {
 				"resources": [
 					"css/qiuzhi/attention-persons.css",
-					"js/qiuzhi/attentionPersons.js"
+					"js/qiuzhi/attentionPersons.js",
+					"css/mui.min.css",
+					"js/utils/h5fresh.js",
+					"css/utils/common.css",
+					"js/libs/crypto-js/crypto-js.js",
+					"js/publicProtocol.js",
+					"js/publicQiuzhiProtocol.js",
+					"js/mui.min.js",
+					"js/utils/events.js"
 				],
 				"refer": [],
 				"priority": 0
 			},
 			"html/qiuzhi/qiuzhi-expertAllComment.html": {
 				"resources": [
-					"css/qiuzhi/qiuzhi-expertAllComment.css"
+					"css/qiuzhi/qiuzhi-expertAllComment.css",
+					"js/mui.pullToRefresh.js",
+					"js/libs/jquery.js",
+					"js/storageKeyName.js",
+					"js/mui.pullToRefresh.material.js",
+					"js/libs/RSA/BigInt.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js",
+					"js/libs/myStorage/myStorage.js"
 				],
 				"refer": [],
 				"priority": 0
