--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1531,7 +1531,8 @@
 					"image/cloud/A_folder.png",
 					"js/mui.lazyload.js",
 					"js/mui.lazyload.img.js",
-					"css/utils/preview.css"
+					"css/utils/preview.css",
+					"js/utils/cryption.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -2318,7 +2319,8 @@
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
 					"fonts/iconfont.ttf",
-					"css/quan/custom-textarea.css"
+					"css/quan/custom-textarea.css",
+					"js/cloud/mui.previewimage.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -3222,7 +3224,11 @@
 					"image/dynamic/icon_praise_small.png",
 					"css/iconfont/iconfont.css",
 					"css/mui.min.css",
-					"css/utils/common.css"
+					"css/utils/common.css",
+					"js/mui.zoom.js",
+					"js/mui.previewimage.js",
+					"css/utils/preview.css",
+					"css/show/show.css"
 				],
 				"refer": [],
 				"priority": 0
