--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1041,7 +1041,11 @@
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
 					"js/libs/crypto-js/crypto-js.js",
-					"css/quan/custom-textarea.css"
+					"css/quan/custom-textarea.css",
+					"js/utils/cryption.js",
+					"js/utils/CloudFileUtil.js",
+					"js/utils/compress.js",
+					"js/qiniu/qiniu.js"
 				],
 				"refer": [
 					"html/homework/classes-select.html"
@@ -2289,7 +2293,9 @@
 					"js/publicProtocol.js",
 					"js/mui.min.js",
 					"css/mui.min.css",
-					"js/storageKeyName.js"
+					"js/storageKeyName.js",
+					"js/utils/cryption.js",
+					"js/qiniu/qiniu.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -2611,7 +2617,9 @@
 					"html/qiuzhi/qiuzhi-questionSub.html",
 					"js/utils/events.js"
 				],
-				"refer": [],
+				"refer": [
+					"html/qiuzhi/experts_main.html"
+				],
 				"priority": 0
 			},
 			"html/qiuzhi/qiuzhi-questionSub.html": {
@@ -2638,7 +2646,11 @@
 					"js/utils/signHmacSHA1.js",
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
-					"js/utils/RSAEncrypt.js"
+					"js/utils/RSAEncrypt.js",
+					"css/utils/preview.css",
+					"js/mui.zoom.js",
+					"fonts/fangzheng.ttf",
+					"js/mui.previewimage.js"
 				],
 				"refer": [
 					"html/qiuzhi/qiuzhi-addAnswer.html"
@@ -3182,7 +3194,27 @@
 					"css/mui.min.css",
 					"css/utils/common.css",
 					"image/qiuzhi/expert_level.png",
-					"js/libs/crypto-js/crypto-js.js"
+					"js/libs/crypto-js/crypto-js.js",
+					"css/utils/pullToRefresh.css",
+					"js/publicQiuzhiProtocol.js",
+					"js/utils/events.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/myStorage/myStorage.js",
+					"css/iconfont/iconfont.css",
+					"js/utils/signHmacSHA1.js",
+					"fonts/iconfont.ttf",
+					"js/utils/postData.js",
+					"image/utils/default_personalimage.png",
+					"js/mui.pullToRefresh.js",
+					"js/storageKeyName.js",
+					"js/mui.pullToRefresh.material.js",
+					"js/libs/crypto-js/require.js",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"fonts/fangzheng.ttf",
+					"js/libs/RSA/BigInt.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/RSAEncrypt.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -3207,7 +3239,8 @@
 					"css/mui.min.css",
 					"css/utils/common.css",
 					"js/libs/crypto-js/crypto-js.js",
-					"/image/utils/default_load_2.gif"
+					"/image/utils/default_load_2.gif",
+					"js/storageKeyName.js"
 				],
 				"refer": [],
 				"priority": 0
