--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2579,7 +2579,8 @@
 					"js/utils/RSAEncrypt.js",
 					"css/iconfont/iconfont.css",
 					"fonts/iconfont.ttf",
-					"js/libs/crypto-js/crypto-js.js"
+					"js/libs/crypto-js/crypto-js.js",
+					"fonts/fangzheng.ttf"
 				],
 				"refer": [],
 				"priority": 0
