求知回答详情 图片显示缩略图

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2858,7 +2858,8 @@
 					"image/qiuzhi/arraw-down.png"
 				],
 				"refer": [
-					"html/qiuzhi/qiuzhi-addAnswer.html"
+					"html/qiuzhi/qiuzhi-addAnswer.html",
+					"html/quan/zone_main.html"
 				],
 				"priority": 0
 			},
