1、个人动态和展现去掉评论框 2、家校圈去掉家长列表 3、展现图片显示太小的问题 4、专家详情添加背景图

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -3271,7 +3271,8 @@
 					"js/mui.zoom.js",
 					"js/mui.previewimage.js",
 					"css/utils/preview.css",
-					"css/show/show.css"
+					"css/show/show.css",
+					"js/show/show-sub.js"
 				],
 				"refer": [],
 				"priority": 0
