作业图片放置

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -554,7 +554,13 @@
 					"js/utils/RSAEncrypt.js",
 					"js/utils/urlBrief.js",
 					"css/iconfont/iconfont.css",
-					"fonts/iconfont.ttf"
+					"fonts/iconfont.ttf",
+					"js/mui.pullToRefresh.js",
+					"js/mui.zoom.js",
+					"js/mui.pullToRefresh.material.js",
+					"js/mui.previewimage.js",
+					"js/utils/h5fresh.js",
+					"css/utils/preview.css"
 				],
 				"refer": [
 					"html/quan/classSpace-persons.html"
@@ -1141,7 +1147,9 @@
 					"css/homework/subjects-icon.css",
 					"js/mui.zoom.js",
 					"js/mui.previewimage.js",
-					"css/utils/preview.css"
+					"css/utils/preview.css",
+					"fonts/fangzheng.ttf",
+					"fonts/iconfont.ttf"
 				],
 				"refer": [
 					"html/homework/homework-comment.html"
@@ -2141,7 +2149,8 @@
 					"fonts/mui.ttf",
 					"css/mui.min.css",
 					"css/utils/common.css",
-					"js/utils/events.js"
+					"js/utils/events.js",
+					"fonts/fangzheng.ttf"
 				],
 				"refer": [],
 				"priority": 0
@@ -2281,7 +2290,11 @@
 					"css/iconfont/iconfont.css",
 					"fonts/iconfont.ttf",
 					"css/homework/subjects-icon.css",
-					"image/homework/need-submit.png"
+					"image/homework/need-submit.png",
+					"css/utils/preview.css",
+					"js/mui.zoom.js",
+					"fonts/fangzheng.ttf",
+					"js/mui.previewimage.js"
 				],
 				"refer": [
 					"html/homework/doHomework-stu.html"
@@ -2406,7 +2419,8 @@
 					"css/iconfont/iconfont.css",
 					"js/mui.zoom.js",
 					"js/mui.previewimage.js",
-					"css/utils/preview.css"
+					"css/utils/preview.css",
+					"fonts/fangzheng.ttf"
 				],
 				"refer": [
 					"html/homework/pic-detail.html"
@@ -3337,7 +3351,23 @@
 					"js/publicProtocol.js",
 					"js/publicQiuzhiProtocol.js",
 					"js/mui.min.js",
-					"js/utils/events.js"
+					"js/utils/events.js",
+					"js/mui.pullToRefresh.js",
+					"js/storageKeyName.js",
+					"js/mui.pullToRefresh.material.js",
+					"fonts/mui.ttf",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"js/libs/myStorage/myStorage.js",
+					"css/iconfont/iconfont.css",
+					"js/libs/jquery.js",
+					"fonts/fangzheng.ttf",
+					"js/libs/RSA/BigInt.js",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js",
+					"image/utils/default_personalimage.png"
 				],
 				"refer": [],
 				"priority": 0
@@ -3356,7 +3386,8 @@
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
-					"js/libs/myStorage/myStorage.js"
+					"js/libs/myStorage/myStorage.js",
+					"js/libs/crypto-js/crypto-js.js"
 				],
 				"refer": [],
 				"priority": 0
