--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -482,7 +482,13 @@
 					"image/utils/default_personalimage.png",
 					"js/utils/native.js",
 					"css/iconfont/iconfont.css",
-					"fonts/iconfont.ttf"
+					"fonts/iconfont.ttf",
+					"js/mui.zoom.js",
+					"fonts/fangzheng.ttf",
+					"js/mui.previewimage.js",
+					"js/mui.lazyload.js",
+					"css/utils/preview.css",
+					"js/mui.lazyload.img.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -2879,7 +2885,8 @@
 				],
 				"refer": [
 					"html/qiuzhi/qiuzhi-addAnswer.html",
-					"html/quan/zone_main.html"
+					"html/quan/zone_main.html",
+					"html/qiuzhi/expert-detail.html"
 				],
 				"priority": 0
 			},
