作业已提交

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -811,7 +811,8 @@
 					"fonts/iconfont.ttf",
 					"js/mui.pullToRefresh.js",
 					"css/utils/MUI-pullToRefresh.css",
-					"js/mui.pullToRefresh.material.js"
+					"js/mui.pullToRefresh.material.js",
+					"fonts/fangzheng.ttf"
 				],
 				"refer": [
 					"html/homework/homework-tea.html",
@@ -3340,7 +3341,26 @@
 					"css/qiuzhi/qiuzhi-inviteAnswer.css",
 					"js/mui.pullToRefresh.js",
 					"css/iconfont/iconfont.css",
-					"js/mui.pullToRefresh.material.js"
+					"js/mui.pullToRefresh.material.js",
+					"js/libs/crypto-js/crypto-js.js",
+					"js/publicQiuzhiProtocol.js",
+					"js/storageKeyName.js",
+					"fonts/mui.ttf",
+					"js/utils/events.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"css/utils/common.css",
+					"js/libs/myStorage/myStorage.js",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/mui.min.js",
+					"fonts/fangzheng.ttf",
+					"js/libs/RSA/BigInt.js",
+					"css/mui.min.css",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js"
 				],
 				"refer": [],
 				"priority": 0
