--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1627,7 +1627,8 @@
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
-					"fonts/fangzheng.ttf"
+					"fonts/fangzheng.ttf",
+					"js/utils/cryption.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -1771,7 +1772,8 @@
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
 					"js/libs/crypto-js/crypto-js.js",
-					"js/utils/events.js"
+					"js/utils/events.js",
+					"fonts/fangzheng.ttf"
 				],
 				"refer": [
 					"html/mine/qun_manage_invite_info.html"
@@ -3205,11 +3207,14 @@
 					"js/utils/RSAEncrypt.js",
 					"css/mine/manager_member.css",
 					"css/iconfont/iconfont.css",
-					"css/mine/manager_data.css"
+					"css/mine/manager_data.css",
+					"fonts/fangzheng.ttf",
+					"fonts/iconfont.ttf"
 				],
 				"refer": [
 					"html/quan/group-pInfo.html",
-					"html/mine/qun_manage_info.html"
+					"html/mine/qun_manage_info.html",
+					"html/mine/qun_manage_invite.html"
 				],
 				"priority": 0
 			},
