--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -3207,7 +3207,8 @@
 					"js/utils/CloudFileUtil.js",
 					"js/utils/compress.js",
 					"js/qiniu/qiniu.js",
-					"fonts/iconfont.ttf"
+					"fonts/iconfont.ttf",
+					"css/qiuzhi/qiuzhi-addAnswer.css"
 				],
 				"refer": [],
 				"priority": 0
